Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/054_shadowing_decl_return_less.xi
f(x:int) : int, int
f(x:int) : int

//@PRACOWNIA
//@should_not_typecheck
